@@ -2,7 +2,9 @@ Cascading Change Log
 
 unreleased
 
-  Fixed bug where c.t.Fields.SWAP did not properly resolve when following a c.p.Every pipe.  
+  Removed imports for SLF4J and replaced with Apache LOG4j in c.s.TextDelimited.
+
+  Fixed bug where c.t.Fields.SWAP did not properly resolve when following a c.p.Every pipe.
 
 1.1.0
 
